2004-06-11 Florian Boor <florian.boor@kernelconcepts.de>
	* main.c: Moving the kill() call to a better place, many thanks Phil!
	
2004-05-26 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: removed hardcoded toolbar style.

2004-03-12 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c, packages.*: Implemented package information facility.
	* interface.c: Some fixes and code cleanups.
	* Makefile: Several fixes to use pkg-config correctly.
	* Released V 0.0.9
	
2004-02-21 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Help function implemented.

2004-02-11 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Added list filtering from menu.
	* interface.c: Status messages for update ops.
	* interface.c: Added about dialog.
	
2004-02-10 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Made basic frontend work again. We create a package list to 
	  filter now. 
	* Makefile: We work on V 0.0.9.
	
2004-01-23 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Started to split list into installed/not installed packages.
	* interface.c: Enable / Disable menu items.
	* Removed some inactive stuff, some formating changes.
	* Packaged 0.0.8-2

2004-01-19 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c, *.desktop.in: Fixed some other bugs due to filename change.
	* Makefile: Added local package icon to install list.
	* interface.c: Added main menu, removed stuff from toolbar.

2004-01-17 Florian Boor <florian.boor@kernelconcepts.de>
	* packages.c: Another fix, works again.
	* Renamed pixmap file.
	* Released and packaged V 0.0.8
	
2003-12-29 Florian Boor <florian.boor@kernelconcepts.de>
	* packages.c: Some changes to work with latest libipkg.

2003-10-30 Florian Boor <florian.boor@kernelconcepts.de>
	* interface.c: Install local packages.
	
2003-10-28 Florian Boor <florian.boor@kernelconcepts.de>
	* packages.*, interface.c: Changed to renamed header files.
	* filesel.*: new files (from gpe-beam)