@@ -4,6 +4,6 @@ Priority: optional
 Version: VERSION
 Architecture: arm
 Maintainer: Florian Boor <florian.boor@kernelconcepts.de>
-Depends: libgpewidget1 (>= 0.40), libipkg (>= 0.99.116), libdisplaymigration0, gpe-icons (>= 0.18)
+Depends: libgpewidget1 (>= 0.40), libipkg (>= 0.99.124), gpe-icons (>= 0.18)
 Description: A package manager GUI
 Source: ftp://ftp.handhelds.org/pub/projects/gpe/source/gpe-package-VERSION.tar.gz
